@@ -1,3 +1,9 @@
+2008-05-05  Marius Strobl <marius@FreeBSD.org>
+
+	* gthr-posix.h (__gthread_active_p): Use the Solaris implementation
+	for FreeBSD as well.
+	* gthr-posix95.h: Likewise.
+
 2008-05-05  Ira Rosen  <irar@il.ibm.com>
 
 	PR tree-optimization/36119
